--- a/Elmla3eb/Base.lproj/ForgotPasswordVC.xib
+++ b/Elmla3eb/Base.lproj/ForgotPasswordVC.xib
@@ -29,7 +29,7 @@
                     </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="phonePad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80l-zT-omC">
                     <rect key="frame" x="117.5" y="197" width="140" height="44"/>
